--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -5,10 +5,8 @@
       ADR<span class="logo-accent"></span>S
     </a>
     <ul class="nav-menu">
-      <li class="nav-item"><a href="#inicio">Inicio</a></li>
-      <li class="nav-item"><a href="#adquisiciones">Adquisiciones</a></li>
-      <li class="nav-item"><a href="#reportes">Reportes</a></li>
-      <li class="nav-item"><a href="#configuración">Configuración</a></li>
+      <li class="nav-item"><a href="/">Inicio</a></li>
+      <li class="nav-item"><a href="adquisiciones">Adquisiciones</a></li>
     </ul>
   </nav>
 </header> 
